# postgresml

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  404.html  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.local  PRODUCT.md  README.md  README_Develop_with_devenv.md  SECURITY.md  benchmarks.sql  devenv.nix  devenv.yaml  docker-compose.cuda.yml  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  index.html  requirements.txt  scikit_import.sql  scikit_train_and_predict.sql  sitemap.xml  start_devenv_and_build.sh
pgml-apps/cargo-pgml-components/: Cargo.toml  README.md
pgml-apps/discord-bot/: .env.template  README.md  bot.py  discord_bot.py  ingest.ipynb  ingest_data.ipynb  pyproject.toml  start.py  start_bot.py
pgml-apps/hyperbot/: .env.template  README.md  pyproject.toml
pgml-apps/pgml-chat/: .env.template  .gitignore  README.md  pyproject.toml
pgml-dashboard/: .dockerignore  .editorconfig  .env.TEMPLATE  .env.development  .gitignore  .ignore  .python-version  Cargo.toml  Dockerfile  README.md  build.rs  bumper  bundle.js  manage.py  package-lock.json  package.json  requirements.txt  runtime.txt  sailfish.toml  sqlx-data.json  test_table.sql~
pgml-dashboard/.cargo/: config.toml
pgml-dashboard/.sqlx/: query-0d11d20294c9ccf5c25fcfc0d07f8b7774aad3cdff4121e50aa3fcb11bcc85ec.json  query-23498954ab1fc5d9195509f1e048f31802115f1f3981776ea6de96a0292a7973.json  query-287957935aa0f5468d34153df78bf1534d74801636954d0c2e04943225de4d19.json  query-3c404506ab6aaaa692b5fab0cd3a1c58e1fade97e72502f7931737ea0a724ad4.json  query-5200e99503a6d5fc51cd1a3dee54bbb7c388a3badef93153077ba41abc0b3543.json  query-568dd47e8e95d61535f9868364ad838d040f4c66c3f708b5b2523288dd955d33.json  query-5c3448b2e6a63806b42a839a58043dc54b1c1ecff40d09dcf546c55318dabc06.json  query-6126dede26b7c52381abf75b42853ef2b687a0053ec12dc3126e60ed7c426bbf.json  query-65e865b0a1c2a69aea8d508a3ad998a0dbc092ed1ccebf72b4a5fe60a0f90e8a.json  query-66f62d3857807d6ae0baa2301e7eae28b0bf882e7f56f5edb47cc56b6a80beee.json  query-7095e7b76e23fa7af3ab2cacc42778645f8cd748e5e0c2ec392208dac6755622.json  query-7285e17ea8ee359929b9df1e6631f6fd94da94c6ff19acc6c144bbe46b9b902b.json  query-7bfa0515e05b1d522ba153a95df926cdebe86b0498a0bd2f6338c05c94dd969d.json  query-88cb8f2a0394f0bc19ad6910cc1366b5e9ca9655a1de7b194b5e89e2b37f0d28.json  query-8a5f6907456832e1db64bff6692470b790b475646eb13f88275baccef83deac8.json  query-96ba78cf2502167ee92b77f34c8955b63a94befd6bfabb209b3f8c477ec1170f.json  query-c0311e3d7f3e4a2d8d7b14de300def255b251c216de7ab2d3864fed1d1e55b5a.json  query-c51dddac8ca1272eb957b5cbfd789e63c9e8897d62bc2c57c168eba5ada12dc3.json  query-c5eaa1c003a32a2049545204ccd06e69eace7754291d1c855da059181bd8b14e.json  query-c5faa3dc630e649d97e10720dbc33351c7d792ee69a4a90ce26d61448e031520.json  query-d8fb565e5ca7f3b60a28e00080902ec34a9036a77ffdde04957f8a6fd543e31d.json  query-da28d578e5935c65851410fbb4e3a260201c16f9bfacfc9bbe05292c292894a2.json  query-f1a0941049c71bee1ea74ede2e3199d88bf0fc739ca2e2510ee9f6178b12e80a.json  query-f7f320a3fe2a569d64dbb0fe806bdd10282de6c8a5e6ae739f377a883af4a3f2.json
pgml-dashboard/app/: admin.py  apps.py  context_processors.py  middleware.py  models.py  serializers.py  tests.py  urls.py
pgml-dashboard/content/: README.md
pgml-dashboard/deb/: build.sh
pgml-dashboard/docker/: .env.docker  entrypoint.sh
pgml-dashboard/explorer/: admin.py  apps.py  models.py  urls.py  views.py
pgml-dashboard/migrations/: 20221125201109_notebook.down.sql  20221125201109_notebook.up.sql  20221129170843_notebooks_data.down.sql  20221129170843_notebooks_data.up.sql  20221130170423_uploaded_files.down.sql  20221130170423_uploaded_files.up.sql
pgml-dashboard/notebooks/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
pgml-dashboard/pgml_dashboard/: asgi.py  settings.py  urls.py  wsgi.py
pgml-dashboard/scripts/: setup.sh  test.sh
pgml-dashboard/src/: app.rs  catchers.rs  context.rs  errors.rs  fairings.rs  fileserv.rs  forms.rs  guards.rs  lib.rs  main.rs  migrate.rs  models.rs  notifications.rs  responses.rs  routes.rs  sentry.rs  templates.rs  tests.rs  types.rs
pgml-dashboard/static/: README.md  new.css
pgml-dashboard/templates/: cell.html  deployment.html  deployments.html  footer.html  header.html  model.html  models.html  not_found.html  notebook.html  notebooks.html  project.html  projects.html  snapshot.html  snapshots.html  sql.html  sql_error.html  undo.html  uploaded.html  uploader.html
pgml-extension/: .dockerignore  .editrconfig  .gitignore  Brewfile  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.local  MANIFEST.in  MIT-LICENSE.txt  README.md  build.rs  build_extension.sh  control  ld.map  pgml.control  requirements-autogptq.txt  requirements-xformers.txt  requirements.amd64.txt  requirements.base.txt  requirements.linux.txt  requirements.macos.txt  requirements.py312.txt  requirements.txt  restart.sh  rustfmt.toml  setup.py
pgml-extension/.cargo/: config  config.toml
pgml-extension/bgworker-message/: Cargo.toml
pgml-extension/bgworker_example/: Cargo.toml  bgworker_example.control
pgml-extension/docker/: Cargo.toml.cuda  Cargo.toml.no-python  build_ubuntu_deb.sh  entrypoint.sh  install_cuda.sh  postgresml.conf  postgresql.conf
pgml-extension/examples/: binary_classification.sql  chunking.sql  classification.sql  cluster.sql  clustering.sql  decomposition.sql  embedding.sql  finetune.sql  image_classification.sql  joint_regression.sql  multi_classification.sql  preprocessing.sql  regression.sql  test_chunking.sql  transformers.sql  vectors.sql
pgml-extension/pgml_extension/: __init__.py  __main__.py  datasets.py  logging_setup.py  model.py  scratch.py  sql.py  transformers.py  utils.py
pgml-extension/pgml_rust/: Cargo.toml  Dockerfile  README.md  build.rs  build_deb.sh  build_extension.sh  build_ubuntu_deb.sh  control  pgml.control  pgml_rust.control
pgml-extension/proxy-message/: Cargo.toml
pgml-extension/sql/: install.sql  pgml--2.0.2--2.1.0.sql  pgml--2.4.1--2.4.2.sql  pgml--2.4.3--2.4.4.sql  pgml--2.5.0--2.5.1.sql  (+18 more)
(+2332 files in other folders)
