[package]
name = "pgml-dashboard"
version = "2.7.4"
edition = "2021"
authors = ["PostgresML <team@postgresml.org>"]
license = "MIT"
description = "Web dashboard for PostgresML, an end-to-end machine learning platform for PostgreSQL"
homepage = "https://postgresml.org"
repository = "https://github.com/postgremsl/postgresml"
include = ["src/", "sqlx-data.json", "templates/", "migrations/", "static/"]

[dependencies]
anyhow = "1"
aho-corasick = "0.7"
base64 = "0.21"
comrak = "0.17"
chrono = "0.4"
csv-async = "1"
dotenv = "0.15"
env_logger = "0.10"
glob = "0.3"
itertools = "0.10"
parking_lot = "0.12"
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"
once_cell = "1.18"
rand = "0.8"
regex = "1.9"
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["secrets"] }
sailfish = "0.5"
scraper = "0.17"
serde = "1"
sentry = "0.31"
sentry-log = "0.31"
sentry-anyhow = "0.31"
serde_json = "1"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres", "json", "migrate", "time", "uuid", "bigdecimal", "offline"] }
tantivy = "0.19"
time = "0.3"
tokio = { version = "1", features = ["full"] }
yaml-rust = "0.4"
zoomies = { git="https://github.com/HyperparamAI/zoomies.git", branch="master" }
pgvector = { version = "0.2.2", features = [ "sqlx", "postgres" ] }

[build-dependencies]
md5 = "0.7"
glob = "0.3"
