[package]
name = "pgml-dashboard"
version = "2.7.12"
edition = "2021"
authors = ["PostgresML <team@postgresml.org>"]
license = "MIT"
description = "Web dashboard for PostgresML, an end-to-end machine learning platform for PostgreSQL"
homepage = "https://postgresml.org"
repository = "https://github.com/postgremsl/postgresml"
include = ["src/", "sqlx-data.json", "templates/", "migrations/", "static/"]
default-run = "pgml-dashboard"

[dependencies]
anyhow = "1"
aho-corasick = "0.7"
base64 = "0.21"
comrak = "0.17"
chrono = { version = "0.4", features = ["serde"] }
csv-async = "1"
console-subscriber = "*"
convert_case = "0.6"
dotenv = "0.15"
env_logger = "0.10"
glob = "*"
itertools = "0.10"
parking_lot = "0.12"
lazy_static = "1.4"
log = "0.4"
markdown = "1.0.0-alpha.14"
num-traits = "0.2"
once_cell = "1.18"
pgml-components = { path = "../packages/pgml-components" }
pgvector = { version = "0.3", features = [ "sqlx", "postgres" ] }
rand = "0.8"
regex = "1.9"
reqwest = { version = "0.11", features = ["json"] }
sailfish = "0.8.0" # 0.8.1 has breaking changes
scraper = "0.17"
serde = "1"
sentry = "0.31"
sentry-log = "0.31"
sentry-anyhow = "0.31"
serde_json = "1"
sqlparser = "0.38"
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres", "json", "migrate", "time", "uuid", "bigdecimal"] }
tantivy = "0.19"
time = "0.3"
tokio = { version = "1", features = ["full"] }
url = "2.4"
yaml-rust = "0.4"
zoomies = { git="https://github.com/HyperparamAI/zoomies.git", branch="master" }
futures = "0.3.29"
korvus = "1.1.2"
axum = { version = "0.7.7", features = ["ws"] }
cookie = { version = "0.18.1", features = ["private"] }

[build-dependencies]
glob = "*"
