[package]
name = "pgml"
version = "2.7.4"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["pg15", "python"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
use_as_lib = []
pg_test = []
python = ["pyo3"]
cuda = ["xgboost/cuda", "lightgbm/cuda"]

[dependencies]
pgrx = "=0.9.8"
pgrx-pg-sys = "=0.9.8"
xgboost = { git = "https://github.com/postgresml/rust-xgboost.git", branch = "master" }
once_cell = { version = "1", features = ["parking_lot"] }
rand = "0.8"
ndarray = { version = "0.15.6", features = ["serde", "blas"] }
ndarray-stats = "0.5.1"
blas = { version = "0.22" }
blas-src = { version = "0.9", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
rmp-serde = { version = "1.1" }
typetag = "0.2"
pyo3 = { version = "0.17", features = ["auto-initialize"], optional = true }
heapless = "0.7"
lightgbm = { git = "https://github.com/postgresml/lightgbm-rs", branch = "main" }
parking_lot = "0.12"
itertools = "0.11"
linfa = { path = "deps/linfa" }
linfa-linear = { path = "deps/linfa/algorithms/linfa-linear", features = [
    "serde",
] }
linfa-logistic = { path = "deps/linfa/algorithms/linfa-logistic" }
linfa-svm = { path = "deps/linfa/algorithms/linfa-svm", features = ["serde"] }
anyhow = { version = "1.0" }
indexmap = { version = "1.0", features = ["serde"] }
signal-hook = "0.3"
flate2 = "1.0"
csv = "1.2"

[dev-dependencies]
pgrx-tests = "=0.9.8"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 3
