[package]
name = "pgml"
version = "2.8.2"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["pg16", "python"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
use_as_lib = []
pg_test = []
python = ["pyo3"]
cuda = ["xgboost/cuda", "lightgbm/cuda"]

[dependencies]
anyhow = { version = "1.0" }
csv = "1.2"
flate2 = "1.0"
blas = { version = "0.22" }
blas-src = { version = "0.9", features = ["openblas"] }
indexmap = { version = "2.1", features = ["serde"] }
itertools = "0.12"
heapless = "0.7"
lightgbm = { git = "https://github.com/postgresml/lightgbm-rs", branch = "main" }
linfa = { path = "deps/linfa" }
linfa-linear = { path = "deps/linfa/algorithms/linfa-linear", features = [
    "serde",
] }
linfa-logistic = { path = "deps/linfa/algorithms/linfa-logistic" }
linfa-svm = { path = "deps/linfa/algorithms/linfa-svm", features = ["serde"] }
once_cell = { version = "1", features = ["parking_lot"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray = { version = "0.15.6", features = ["serde", "blas"] }
ndarray-stats = "0.5.1"
parking_lot = "0.12"
pgrx = "=0.11.2"
pgrx-pg-sys = "=0.11.2"
pyo3 = { version = "0.20.0", features = ["auto-initialize"], optional = true }
rand = "0.8"
rmp-serde = { version = "1.1" }
signal-hook = "0.3"
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
typetag = "0.2"
xgboost = { git = "https://github.com/postgresml/rust-xgboost", branch = "master" }
lazy_static = "1.4.0"

[dev-dependencies]
pgrx-tests = "=0.11.2"

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 3
