[package]
name = "pgml"
version = "2.10.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "pgrx_embed_pgml"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17", "python"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
use_as_lib = []
pg_test = []
python = ["pyo3"]
cuda = ["xgboost/cuda", "lightgbm/cuda"]

[dependencies]
anyhow = { version = "1.0" }
csv = "1.3"
flate2 = "1.0"
blas = { version = "0.22" }
blas-src = { version = "0.10", features = ["openblas"] }
indexmap = { version = "2.7", features = ["serde"] }
itertools = "0.12"
hash32 = { version = "=0.2.1" }
heapless = "0.7"
lightgbm = { git = "https://github.com/postgresml/lightgbm-rs", branch = "main" }
linfa = { git = "https://github.com/postgresml/linfa", branch = "master" }
linfa-linear = { git = "https://github.com/postgresml/linfa", branch = "master", features = ["serde"] }
linfa-logistic = { git = "https://github.com/postgresml/linfa", branch = "master", features = ["serde"] }
linfa-svm = { git = "https://github.com/postgresml/linfa", branch = "master", features = ["serde"] }
once_cell = { version = "1.20", features = ["parking_lot"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray = { version = "0.15", features = ["serde", "blas"] }
ndarray-stats = "0.5"
parking_lot = "0.12"
pgrx = "=0.12.9"
pgrx-pg-sys = "=0.12.9"
pyo3 = { version = "0.23", features = ["anyhow", "auto-initialize"], optional = true }
rand = "0.8"
rmp-serde = { version = "1.3" }
signal-hook = "0.3"
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
typetag = "0.2"
xgboost = { git = "https://github.com/postgresml/rust-xgboost", branch = "master" }

[dev-dependencies]
pgrx-tests = "=0.12.9"

[build-dependencies]
anyhow = { version = "1.0" }
vergen-git2 = { version = "1.0", features = ["build", "cargo", "rustc", "si"] }

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 3
