[tool.poetry]
name = "hyperbot"
version = "0.1.0"
description = "PostgresML bot builder for all your documentation"
authors = ["PostgresML <team@postgresml.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hyperbot"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
openai = "^0.27.8"
rich = "^13.4.2"
pgml = "^0.8.0"
python-dotenv = "^1.0.0"
click = "^8.1.6"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyperbot = "hyperbot.main:main"
