[package]
name = "pgml_rust"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg10 = ["pgx/pg10", "pgx-tests/pg10" ]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg_test = []

[dependencies]
pgx = { git="https://github.com/postgresml/pgx.git", branch="master" }
smartcore = { git="https://github.com/smartcorelib/smartcore.git", branch="development", features = ["serde", "ndarray-bindings"] }
pyo3 = "0.17.1"
once_cell = "1"
rand = "0.8"
xgboost = { path = "rust-xgboost" }
ndarray = { version = "0.15.6", features = ["serde", "blas"] }
blas = { version = "0.22.0" }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
serde = { version = "1.0.2" }
serde_json = { version = "1.0.85" }
rmp-serde = { version = "1.1.0" }
typetag = "0.2"
heapless = "0.7.13"

[dev-dependencies]
pgx-tests = "=0.4.5"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
