[package]
name = "pgml"
version = "1.1.1"
edition = "2021"
authors = ["PosgresML <team@postgresml.org>"]
homepage = "https://postgresml.org/"
repository = "https://github.com/postgresml/postgresml"
license = "MIT"
description = "The official pgml Rust SDK"
keywords = ["postgres", "embeddings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pgml"
crate-type = ["lib", "cdylib"]

[dependencies]
rust_bridge = {path = "../rust-bridge/rust-bridge", version = "0.1.0", optional = true }
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres", "json", "time", "uuid"] }
serde_json = "1.0.9"
anyhow = "1.0.9"
tokio = { version = "1.28.2", features = [ "macros", "rt-multi-thread" ] }
chrono = "0.4.9"
pyo3 = { version = "0.18.3", optional = true, features = ["extension-module", "anyhow"] }
pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"], optional = true }
neon = { version = "0.10", optional = true, default-features = false, features = ["napi-6", "promise-api", "channel-api"] }
itertools = "0.10.5"
uuid = {version = "1.3.3", features = ["v4", "serde"] }
md5 = "0.7.0"
sea-query = { version = "0.30.7", features = ["attr", "thread-safe", "with-json", "with-uuid", "postgres-array"] }
sea-query-binder = { version = "0.5.0", features = ["sqlx-postgres", "with-json", "with-uuid", "postgres-array"] }
regex = "1.8.4"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
async-trait = "0.1.71"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["json"] }
indicatif = "0.17.6"
serde = "1.0.181"
futures = "0.3.28"
walkdir = "2.4.0"
lopdf = { version = "0.31.0", features = ["nom_parser"] }
clap = { version = "4", features = ["derive"]}
is-terminal = "0.4"
colored = "2"
ctrlc = "3"
inquire = "0.6"
parking_lot = "0.12.1"
once_cell = "1.19.0"
url = "2.5.0"
serde_with = "3.8.1"

[features]
default = []
rust_bridge = ["dep:rust_bridge"]
python = ["rust_bridge", "dep:pyo3", "dep:pyo3-asyncio"]
javascript = ["rust_bridge", "dep:neon"]
c = ["rust_bridge"]
