[tool.poetry]
name = "pgml"
version = "0.1.0"
description = ""
authors = ["Santi Adavani <santi@hyperparam.ai>"]
readme = "README.md"
packages = [{include = "pgml"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
black = "^23.3.0"
rich = "^13.3.5"
psycopg = "^3.1.9"
psycopg-pool = "^3.1.7"
langchain = "^0.0.167"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
