[tool.poetry]
name = "pgml"
version = "0.6.0"
description = "Python SDK is designed to facilitate the development of scalable vector search applications on PostgreSQL databases."
authors = ["Santi Adavani <santis@gmail.com>"]
readme = "README.md"
packages = [{include = "pgml"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
black = "^23.3.0"
rich = "^13.3.5"
psycopg = "^3.1.9"
psycopg-pool = "^3.1.7"
langchain = "^0.0.167"
ipywidgets = "^8.0.6"
datasets = "^2.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
