[package]
name = "rust_bridge_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The macros for the rust_bridge crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.17", features=["full", "extra-traits", "fold", "visit"]}
quote = "1.0.9"
proc-macro2 = "1.0"
anyhow = "1.0.9"
