[package]
name = "rust_bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The rust_bridge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_bridge_traits = { path = "../rust-bridge-traits", version = "0.1.0" }
rust_bridge_macros = { path = "../rust-bridge-macros", version = "0.1.0" }
