[package]
name = "xgboost-sys"
version = "0.2.0"
authors = ["Dave Challis <dave@suicas.net>"]
links = "xgboost"
build = "build.rs"
license = "MIT"
repository = "https://github.com/davechallis/rust-xgboost"
description = "Native bindings to the xgboost library"
readme = "README.md"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.59"
cmake = "0.1"
