[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = "FastAPI example project to demonstrate pgml sdk"
authors = ["PostgresML <team@postgresml.org>"]
readme = "README.md"
packages = [{include = "fastapi_server"}]

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pgml = "^0.6.0"
pypdf = "^3.9.1"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
